--- a/index.html
+++ b/index.html
@@ -1,26 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>B12A01-landing-launchpad</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./styles/launchpad.css">
 </head>
+
 <body>
-    <nav>
-        <h1>LOGO</h1>
-        <button>Sign Up</button>
-    </nav>
-
-    <header>
-
+    <!-- header section start here -->
+    <header class="hero">
+        <!-- navbar start here -->
+        <nav>
+            <h1 class="inter">LOGO</h1>
+            <button class="btn raleway">Sign Up</button>
+        </nav>
+        <!-- navbar end here -->
+        <!-- banner part start -->
+        <section class="banner text-center">
+            <h2 class="raleway">Cool Dark UI Template for Webflow Agencies!</h2>
+            <button class="btn">Stay Focused</button>
+        </section>
+        <!-- banner part end -->
     </header>
-
+    <!-- header section end here -->
     <main>
+        <!-- preview part start -->
+        <section class="preview">
+            <div class="preview-text raleway">
+                <h2>See It in Action</h2>
+                <p>Explore the live preview and imagine your brand in this bold new look.</p>
+                <button class="btn">Launch Live Preview</button>
+            </div>
+            <div class="preview-img">
+                <img src="./Assets/wc-mini.png" alt="">
+            </div>
+        </section>
+        <!-- preview part end -->
 
+        <!-- rates part start -->
+         <section class="rate text-center">
+            <h3 class="raleway">Joined Thousands of Productive Users</h3>
+            <div class="rate-box inter">
+                <div class="box">
+                    <h1>50K</h1>
+                    <p>Active Users</p>
+                </div>
+                <div class="box">
+                    <h1>2M+</h1>
+                    <p>Focus Sessions</p>
+                </div>
+                <div class="box">
+                    <h1>95%</h1>
+                    <p>Satisfaction Rate</p>
+                </div>
+            </div>
+         </section>
+        <!-- rates part end -->
+        
     </main>
 
     <footer>
-        
+
     </footer>
 </body>
+
 </html>
