added review section

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <!-- preview part end -->
 
         <!-- rates part start -->
-         <section class="rate text-center">
+        <section class="rate text-center">
             <h3 class="raleway">Joined Thousands of Productive Users</h3>
             <div class="rate-box inter">
                 <div class="box">
@@ -65,9 +65,86 @@
                     <p>Satisfaction Rate</p>
                 </div>
             </div>
-         </section>
+        </section>
         <!-- rates part end -->
-        
+
+        <!-- CHALLENGES part -->
+        <!-- review section start -->
+        <section class="review text-center">
+            <h2 class="raleway">What our users say</h2>
+            <div class="review-boxes">
+                <div class="review-box">
+                    <div class="box-img">
+                        <img src="./Assets/icon-star.png" alt="star icon">
+                        <img src="./Assets/icon-star.png" alt="star icon">
+                        <img src="./Assets/icon-star.png" alt="star icon">
+                        <img src="./Assets/icon-star.png" alt="star icon">
+                        <img src="./Assets/icon-star.png" alt="star icon">
+                    </div>
+                    
+                    <div class="box-description inter">
+                        <h3>Loved by Designers</h3>
+                        <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                    </div>
+                    <div class="review-description inter">
+                        <img src="./Assets/avatar.png" alt="">
+                        <div>
+                            <h4>Reviewer name</h4>
+                            <p>Date</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="review-box">
+                    <div class="box-img">
+                        <img src="./Assets/icon-star.png" alt="star icon">
+                        <img src="./Assets/icon-star.png" alt="star icon">
+                        <img src="./Assets/icon-star.png" alt="star icon">
+                        <img src="./Assets/icon-star.png" alt="star icon">
+                        <img src="./Assets/icon-star.png" alt="star icon">
+                    </div>
+                    <div class="box-description inter">
+                        <h3>Loved by Designers</h3>
+                        <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                    </div>
+                    <div class="review-description inter">
+                        <img src="./Assets/avatar.png" alt="">
+                        <div>
+                            <h4>Reviewer name</h4>
+                            <p>Date</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="review-box">
+                    <div class="box-img">
+                        <img src="./Assets/icon-star.png" alt="star icon">
+                        <img src="./Assets/icon-star.png" alt="star icon">
+                        <img src="./Assets/icon-star.png" alt="star icon">
+                        <img src="./Assets/icon-star.png" alt="star icon">
+                        <img src="./Assets/icon-star.png" alt="star icon">
+                    </div>
+                    <div class="box-description inter">
+                        <h3>Loved by Designers</h3>
+                        <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                    </div>
+                    <div class="review-description inter">
+                        <img src="./Assets/avatar.png" alt="">
+                        <div>
+                            <h4>Reviewer name</h4>
+                            <p>Date</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- review section end -->
+
+        <!-- focus section start -->
+         <section class="focus text-center">
+            <h1>Ready to focus better</h1>
+            <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+            <button class="btn">Ger Started Free</button>
+         </section>
+        <!-- focus section end -->
     </main>
 
     <footer>
