added focus section

--- a/index.html
+++ b/index.html
@@ -140,9 +140,13 @@
 
         <!-- focus section start -->
          <section class="focus text-center">
-            <h1>Ready to focus better</h1>
-            <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+            <h1 class="raleway">Ready to focus better</h1>
+            <p class="inter">This template instantly leveled up our presence.” – Studio Vertex</p>
             <button class="btn">Ger Started Free</button>
+
+            <div>
+            <img src="./Assets/wc-big.png" alt="">
+            </div>
          </section>
         <!-- focus section end -->
     </main>
