added main section

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         <!-- banner part end -->
     </header>
     <!-- header section end here -->
+
+    <!-- main section start here -->
     <main>
         <!-- preview part start -->
         <section class="preview">
@@ -81,7 +83,7 @@
                         <img src="./Assets/icon-star.png" alt="star icon">
                         <img src="./Assets/icon-star.png" alt="star icon">
                     </div>
-                    
+
                     <div class="box-description inter">
                         <h3>Loved by Designers</h3>
                         <p>This template instantly leveled up our presence.” – Studio Vertex</p>
@@ -139,18 +141,52 @@
         <!-- review section end -->
 
         <!-- focus section start -->
-         <section class="focus text-center">
+        <section class="focus text-center">
             <h1 class="raleway">Ready to focus better</h1>
             <p class="inter">This template instantly leveled up our presence.” – Studio Vertex</p>
             <button class="btn">Ger Started Free</button>
 
             <div>
-            <img src="./Assets/wc-big.png" alt="">
+                <img src="./Assets/wc-big.png" alt="">
             </div>
-         </section>
+        </section>
         <!-- focus section end -->
-    </main>
 
+        <!-- form section start -->
+        <section class="contact">
+            <div class="contact-content">
+                <div class="contact-title">
+                    <h2 class="raleway text-center">Let's Get in Touch</h2>
+                </div>
+                <!-- Form box start here -->
+                <div class="contact-box">
+                    <form class="inter">
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input type="email" id="email" placeholder="example@gmail.com">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="name">Name</label>
+                            <input type="text" id="name" placeholder="full name">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="message">Message</label>
+                            <textarea id="message" placeholder="write your message..." rows="5"></textarea>
+                        </div>
+
+                        <button type="submit" class="btn">Get in Touch</button>
+                    </form>
+                </div>
+                <!-- Form box start here -->
+            </div>
+        </section>
+        <!-- form section end -->
+    </main>
+    <!-- main section end here -->
+
+    
     <footer>
 
     </footer>
