--- a/index.html
+++ b/index.html
@@ -186,10 +186,21 @@
     </main>
     <!-- main section end here -->
 
-    
-    <footer>
-
+    <!-- footer section start here -->
+    <footer class="footer-section inter text-center">
+        <div class="text-contant">
+            <h1>LOGO</h1>
+            <p>Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your
+                vision to life.</p>
+        </div>
+        <nav class="footer-nav">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">How it Works</a>
+            <a href="#">Services</a>
+        </nav>
     </footer>
+    <!-- footer section end here -->
 </body>
 
 </html>
