--- a/index.html
+++ b/index.html
@@ -190,8 +190,10 @@
     <footer class="footer-section inter text-center">
         <div class="text-contant">
             <h1>LOGO</h1>
-            <p>Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your
-                vision to life.</p>
+            <p>
+                Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your
+                vision to life.
+             </p>
         </div>
         <nav class="footer-nav">
             <a href="#">Home</a>
